--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -1,5 +1,10 @@
 Neos:
   Neos:
+    userInterface:
+      translation:
+        autoInclude:
+          Visol.Neos.LinkClass:
+            - Main
     Ui:
       resources:
         javascript:
