--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "require": {
         "neos/neos": "*",
-        "neos/neos-ui": "^2.8 || ^3.8 || ^4.0 || ^5.0" || ^7.0"
+        "neos/neos-ui": "^2.8 || ^3.8 || ^4.0 || ^5.0 || ^7.0"
     },
     "extra": {
         "neos": {
