--- a/Resources/Private/LinkClass/package.json
+++ b/Resources/Private/LinkClass/package.json
@@ -7,7 +7,8 @@
         "watch": "neos-react-scripts watch"
     },
     "devDependencies": {
-        "@neos-project/neos-ui-extensibility": "^1.3"
+        "@neos-project/build-essentials": "^8.2.3",
+        "@neos-project/neos-ui-extensibility": "^8.2.3"
     },
     "neos": {
         "buildTargetDirectory": "../../Public/JavaScript/LinkClass"
